<!--
  ~ /*
  ~  * Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
  ~  * SPDX-License-Identifier: MIT-0
  ~  *
  ~  * Permission is hereby granted, free of charge, to any person obtaining a copy of this
  ~  * software and associated documentation files (the "Software"), to deal in the Software
  ~  * without restriction, including without limitation the rights to use, copy, modify,
  ~  * merge, publish, distribute, sublicense, and/or sell copies of the Software, and to
  ~  * permit persons to whom the Software is furnished to do so.
  ~  *
  ~  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED,
  ~  * INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A
  ~  * PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
  ~  * HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
  ~  * OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
  ~  * SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  ~  */
  -->

<resources>
    <string name="app_name">AWS IoT Proxy</string>
    <string name="topic">Topic</string>
    <string name="payload">Payload</string>
    <string name="publish">Publish</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="qos0">QoS0</string>
    <string name="qos1">QoS1</string>
    <string name="subscribe">SUBSCRIBE</string>
    <string name="unsubscribe">UNSUBSCRIBE</string>
</resources>
