<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
  ~  * SPDX-License-Identifier: MIT-0
  ~  *
  ~  * Permission is hereby granted, free of charge, to any person obtaining a copy of this
  ~  * software and associated documentation files (the "Software"), to deal in the Software
  ~  * without restriction, including without limitation the rights to use, copy, modify,
  ~  * merge, publish, distribute, sublicense, and/or sell copies of the Software, and to
  ~  * permit persons to whom the Software is furnished to do so.
  ~  *
  ~  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED,
  ~  * INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A
  ~  * PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
  ~  * HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
  ~  * OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
  ~  * SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  ~  */
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/subscribe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.SubscribeFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/subTopic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/topic" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/subQoSRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radioButtonQoS0"
        android:orientation="horizontal"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subTopic">

        <RadioButton
            android:id="@+id/subRadioButtonQoS0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qos0" />

        <RadioButton
            android:id="@+id/subRadioButtonQoS1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qos1" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonSubscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subscribe"

        app:layout_constraintEnd_toEndOf="@+id/buttonUnsubscribe"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/subQoSRadioGroup" />

    <Button
        android:id="@+id/buttonUnsubscribe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unsubscribe"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/buttonSubscribe"
        app:layout_constraintTop_toBottomOf="@+id/subQoSRadioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>