<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~  * Copyright Amazon.com, Inc. or its affiliates. All Rights Reserved.
  ~  * SPDX-License-Identifier: MIT-0
  ~  *
  ~  * Permission is hereby granted, free of charge, to any person obtaining a copy of this
  ~  * software and associated documentation files (the "Software"), to deal in the Software
  ~  * without restriction, including without limitation the rights to use, copy, modify,
  ~  * merge, publish, distribute, sublicense, and/or sell copies of the Software, and to
  ~  * permit persons to whom the Software is furnished to do so.
  ~  *
  ~  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED,
  ~  * INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A
  ~  * PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT
  ~  * HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION
  ~  * OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE
  ~  * SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
  ~  */
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/publish"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.PublishFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pubTopic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/topic" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pubPayload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/pubTopic">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/payload" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/pubQoSRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:checkedButton="@+id/radioButtonQoS0"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pubPayload">

        <RadioButton
            android:id="@+id/radioButtonQoS0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qos0" />

        <RadioButton
            android:id="@+id/radioButtonQoS1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qos1" />

    </RadioGroup>

    <Button
        android:id="@+id/buttonPublish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/publish"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pubQoSRadioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>